--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-python-telegram-bot==20.7
-yt-dlp==2023.12.30
-pymongo==4.6.1
-aiohttp==3.9.1
-aiofiles
-motor
-
+python-telegram-bot[rate-limiter]>=20.0
+yt-dlp>=2023.12.30
+motor>=3.3.0
+aiofiles>=23.0.0
+aiohttp>=3.9.0
